--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <h1>Hola mundo como estas grrr</h1>
 
-<button>Consultar respuesta genial</button>
+<button>Consultar respuesta geniaall</button>
 
 </body>
 </html>
